--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h2 {
   height: 100px;
   widht: 100px;
   border-radius: 50%;
-  position: absolute
+  position: absolute;
   top: 100px;
   right: 20px;
 }
