--- a/style.css
+++ b/style.css
@@ -42,6 +42,6 @@ h2 {
 footer {
   text-align: center;
   background-color: lightgray;
-  line-height: 1.1;
+  line-height: 1.5rem;
   font-size: small;
 }
